# AutoSkill-LC

./: .gitignore  .npmignore  CHANGELOG.md  CL_MAP.md  CL_MAP_CN.md  DEVOLUTION.md  LICENSE  README.md  README_CN.md  index.js  openclaw.plugin.json  package.json  pyproject.toml  setup-entry.js
docs/: ADAPTERS.md  ARCHITECTURE.md  CODEX_ADAPTER.md  INSTALL.md  OPENCLAW_EXPORTS.md  OPENCLAW_PLUGIN.md  OPENCLAW_SERVER_SAFETY_SKILL_MERGE.md  REPORT_V2.md  ROADMAP.md  UNINSTALL.md
docs/plans/: 2026-03-18-sustainable-evolution-execution-plan.md
docs/skills/openclaw-server-safety/: SKILL.md
examples/codex/: fresh-install-and-safe-uninstall.ps1
examples/openclaw/: cron-example.md  server-e2e.sh
extensions/autoskill-lc-openclaw/: index.js  openclaw.plugin.json  setup-entry.js
src/autoskill_lc/: __init__.py  cli.py
src/autoskill_lc/adapters/: __init__.py  base.py
src/autoskill_lc/codex/: __init__.py  adapter.py  config.py  exporter.py  installer.py  reporting.py  status.py
src/autoskill_lc/core/: __init__.py  applier.py  engine.py  (+7 more)
tests/: test_adapter_edge_cases.py  test_applier.py  test_apply_policy.py  test_checkpoints.py  test_codex_cli.py  test_codex_exporter.py  test_codex_installer.py  test_codex_status.py  test_engine.py  test_ledger.py  test_maintenance.py  test_openclaw_adapter.py  test_openclaw_exporter.py  test_openclaw_installer.py  test_openclaw_plugin_package.py  test_openclaw_plugin_runtime.py  test_openclaw_reporting.py  test_openclaw_status.py  test_patches.py  test_rollback.py  test_semantic_merge.py  test_skill_mapper.py  test_verifier.py
(+16 files in other folders)
