[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoskill-lc"
version = "0.1.0"
description = "A loosely-coupled self-evolving skill governance engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AutoSkill-LC Contributors" }
]
dependencies = []

[project.scripts]
autoskill-lc = "autoskill_lc.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

